--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,10 +3,10 @@
 primaryColor = "#E694FF"
 
 # Background color for the main content area.
-backgroundColor = "#00001a"
+backgroundColor = "#08001c"
 
 # Background color used for the sidebar and most interactive widgets.
-secondaryBackgroundColor = "#0f1442"
+secondaryBackgroundColor = "#000229"
 
 # Color used for almost all text.
 textColor = "#FFF"
